# CIS520-Project4

./: .gitignore  README.md
3way-mpi/: CMakeLists.txt  mpi.c  mpi_batch.sh  results.txt  script.sh  test.txt  working_mpi.c
3way-openmp/: CMakeLists.txt  openmp.c  working_openmp.c
3way-pthread/: CMakeLists.txt  a.out  pthread.c  pthread_batch.sh  pthreads  random.txt  results.txt  script.sh  test.txt  working_pthread.c
